feat : add card to katalog

--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,7 @@
         </div>
       </div>
 
+      <!-- akungetesdoang -->
       <!-- CARD -->
        <div onclick="openModal(15.00)"
        class="min-w-[260px] bg-white rounded-xl shadow-md
